# Gemcutter-Samples

./: .editorconfig  .gitignore  ASSETS.cmd  BUILD.cmd  CMakeLists.txt  Jewel3D_Samples.sln  LICENSE  README.md  Settings.cfg  TEST.cmd
Assets/Fonts/: editundo_64.font  edundot_64.font  edunline_128.font  georgia_64.font
Assets/Models/: Monkey.model
Assets/Shaders/: FlatColor.shader  LambertShadow.shader  Simple.shader
Assets/Textures/: Boid.tga
Components/: Boid.cpp  Boid.h  CMakeLists.txt  Components.vcxproj  Components.vcxproj.filters  Flock.cpp  Flock.h  Game.cpp  Game.h  Settings.cfg  main.cpp
Components/Assets/Models/: Bird.model
GUI/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
GodRays/: CMakeLists.txt  Game.cpp  Game.h  GodRays.vcxproj  GodRays.vcxproj.filters  Settings.cfg  main.cpp
GodRays/Assets/Models/: Orb.model  Shack.model
GodRays/Assets/Shaders/Default/: Font.shader  Lambert.shader  Sprite.shader
GodRays/Assets/Shaders/GodRays/: Composite.shader  FullScreenQuad.vert  Radial.shader
Input/: CMakeLists.txt  Game.cpp  Game.h  Input.vcxproj  Settings.cfg  main.cpp
Lighting/: CMakeLists.txt  Game.cpp  Game.h  Lighting.vcxproj  Lighting.vcxproj.filters  Settings.cfg  main.cpp
Lighting/Assets/Models/: Ground.model  Teapot.model
Lighting/Assets/Shaders/: MultipleLights.shader
Lighting/Assets/Shaders/Default/: ParticleBillBoard.shader  Sprite.shader
Particles/: CMakeLists.txt  Game.cpp  Game.h  Particles.vcxproj  Particles.vcxproj.filters  Settings.cfg  VelocityFunc.cpp  VelocityFunc.h  WaveFunc.cpp  WaveFunc.h  main.cpp
Particles/Assets/Shaders/Default/: ParticleBillBoard.shader
Physics2D/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Shadows/: CMakeLists.txt  Game.cpp  Game.h  Settings.cfg  Shadows.vcxproj  main.cpp
SimpleScene/: CMakeLists.txt  Game.cpp  Game.h  Settings.cfg  SimpleScene.vcxproj  SimpleScene.vcxproj.filters  main.cpp
SimpleScene/Assets/Models/: BigBoy.model
Sounds/: CMakeLists.txt  Game.cpp  Game.h  Settings.cfg  Sounds.vcxproj  main.cpp
Sounds/Assets/Models/: Orb.model
Sprites/: CMakeLists.txt  Game.cpp  Game.h  Settings.cfg  Sprites.vcxproj  Sprites.vcxproj.filters  main.cpp
Sprites/Assets/Shaders/Default/: Lambert.shader  Sprite.shader
Text/: CMakeLists.txt  Game.cpp  Game.h  Settings.cfg  Text.vcxproj  Text.vcxproj.filters  main.cpp
Text/Assets/Fonts/: RAZER_64.font  accid_64.font  argos_dev_null_64.font  georgia_64.font  gisha_64.font  major_64.font  xirod_64.font
Text/Assets/Shaders/Default/: Font.shader  Lambert.shader
Workspace/: config.workspace
Workspace/Shaders/: Composite.shader  LambertShadow.shader  MultipleLights.shader  PhysicallyBased.shader  Radial.shader  Simple.shader
Workspace/Shaders/Default/: Font.shader  ParticleBillBoard.shader
